governance-shared/baselines/3.8.0/ChronoPM-Project/references/04-risk-issue-rules.md
# 风险与问题约束规则

本规则适用于风险和问题的识别、评估、应对和升级。风险与问题必须分离管理。

---

## 1. 风险与问题的区分

| | Risk（风险） | Issue（问题） |
|--|--|--|
| 定义 | 可能发生但尚未发生 | 已经发生正在影响项目 |
| 性质 | 潜在威胁 | 实际问题 |
| 管理目标 | 降低概率或影响 | 尽快解决 |
| 文件 | `risks/risk-register.md` | `issues/issue-register.md` |

### 1.1 判定规则

1. 如果某事项已经发生，不得登记为 Risk，应登记为 Issue。
2. 如果某事项尚未发生但存在可能性，不得登记为 Issue，应登记为 Risk。
3. 如果无法判断，标记为"待确认"，不得擅自归类。
4. 风险实际发生时，必须从 Risk 转为 Issue：
   - 风险状态改为 `转为问题`。
   - 在 Issue 登记册中新增对应记录。
   - 两个记录通过 ID 互相关联。
   - 绑定待办 Risk Ref → Issue Ref，待办不丢关联。

### 1.2 识别强化（v3.7.0）

**本包仅威胁向。** 不登记机会型风险。PRINCE2 邻近度不进字段、不进评级矩阵。

1. **信号词甄别**：风险信号（可能/担心/恐怕/万一/有苗头/不确定/存在…隐患）vs 问题信号（已经/正在/导致/卡住/失败/缺员已发生）。日报出现「有…风险」**不直接登记**。已发生事实用风险句式时，纠正并建议改归问题。
2. **三问判定**：① 是否已真实发生？② 描述是可能性还是事实？③ 是否已造成实际阻塞/影响？→ 风险 / 问题 / 待确认。任一问无法回答 → 待确认。
3. **句式**：风险 `因为[原因]，可能导致[后果]，影响[对象]`；问题 `[已发生事实]+[已造成影响]+[影响范围]`。不合句式则改写并同屏对照，PM 确认未曲解后方可登记。
4. **识别判定卡前置**：检出信号 → 先输出判定卡（分类 + 三问依据 + 合句式建议 + Source）→ SUGGEST 登记。**禁止静默直写登记册**。判定卡简版下沉 01 号（日报必载）与 02 号（会议必载），本文件为完整定义。

## 2. 风险识别

### 2.1 风险来源维度

| 维度 | 检查方向 |
|------|----------|
| 需求风险 | 需求模糊、频繁变更、范围蔓延 |
| 技术风险 | 技术选型、架构可行性、性能瓶颈 |
| 进度风险 | 依赖未就绪、资源冲突、工期压缩 |
| 资源风险 | 人员变动、能力不足、多项目冲突 |
| 外部风险 | 政策变化、客户组织变动、供应商问题 |
| 质量风险 | 测试不充分、缺陷修复延迟 |
| 成本风险 | 人力成本超支、返工成本 |
| 合规风险 | 安全合规、数据合规、信创要求 |

### 2.2 风险描述规范

```
风险编号：R-{YYYYMMDD}-{HHmmss}
风险描述：因为 [触发条件/原因]，可能导致 [后果]，影响 [受影响对象]。
风险类别：[需求/技术/进度/资源/外部/质量/成本/合规]
```

**编号生成（v3.7.0 短号）**：
- 新号格式：`R-NNN` / `I-NNN`（三位登记册内递增，与 WP-NNN 同风格）。
- **取号**：只读 `risks/index.md` 或 `issues/index.md` 求最大号 +1，不扫活跃册全文。
- **三格式兼容**：存量 `R-NNN` 短号续用；存量时间戳号 `R-{YYYYMMDD}-{HHmmss}` 与 `R-YYYYMMDD-NNN` **保留不改不重编**；查询/Source/级联三种格式均须识别。
- 决策号仍为 `D-{YYYYMMDD}-{HHmmss}`，本条不改。

## 3. 风险评估

### 3.1 概率 / 影响 / 等级（v3.7.0：高中低三档）

概率、影响均用 **高 / 中 / 低**（弃 1–5 尺；旧「极高」迁移映射为高）。

### 3.2 影响参考（仍可辅助定性，不打分）

| 档 | 进度 | 成本 | 质量 | 范围 |
|------|------|------|------|------|
| 高 | >10 天或里程碑 | >5 万 | 核心受影响 / 不可用 | 需求级或基线 |
| 中 | 5–10 天 | 3–5 万 | 需修复后可用 | 模块级 |
| 低 | <5 天 | <3 万 | 轻微/少量缺陷 | 无或局部 |

### 3.3 风险等级矩阵（3×3）

- **高**：概率高×影响高、高×中、中×高。必须有应对计划；强制 SUGGEST 绑定待办。
- **中**：含「高」另一项为低，或中×中。记录观察，SUGGEST 可选待办。
- **低**：其余。记录观察，无需专项措施。

## 4. 风险应对策略

| 策略 | 适用场景 | 做法 |
|------|----------|------|
| 规避 | 风险过高，可改变计划避免 | 调整方案或技术路线 |
| 转移 | 自身无法控制 | 外包、保险、合同条款 |
| 减轻 | 可降低概率或影响 | 增加测试、备份方案、POC 验证 |
| 接受 | 风险可控或应对成本过高 | 记录并准备应急计划 |

**高等级必须有应对计划**（预防措施/缓解措施/负责人/触发条件/应急计划/关闭条件）。**中等级记录观察，SUGGEST 可选待办**。低等级记录即可。

## 5. 风险升级机制

| 触发条件 | 升级目标 | 时限 |
|----------|----------|------|
| 风险等级达到极高 | 项目发起方 | 24小时内 |
| 风险等级升至高 | 项目经理 | 48小时内 |
| 风险已发生（转为问题） | 项目经理 | 立即 |
| 应对措施失效 | 原路径上一级 | 立即 |

升级时必须提供：风险描述及等级、已采取措施及效果、升级原因、至少2个决策选项（含利弊）、不升级的后果。

## 6. 风险登记册

### 6.1 结构与字段（v3.7.0 分表，单表 ≤7 列）

登记册 = 汇总索引 + 条目详情块。模板见 `risk-register-template.md`。旧 15 列宽表废弃。

| 表 | 列 |
|---|---|
| 汇总索引 | 编号/标题/类别/状态/等级/责任人/关联待办数 |
| 核心字段 | 描述句式/概率/影响/等级/应对策略/责任人/Source |
| 应对子表 | 触发条件与预警信号/应对措施/备注（策略枚举只在核心表） |
| 关联待办 | TD 编号/动作类型/状态/计划完成 |
| 状态时间线 | 日期/状态前→后/触发依据/操作者（不得用自由文本替代） |

状态枚举以本文件为准：开放 / 监控中 / 已缓解 / 已关闭 / 转为问题。类别用业务类（技术/进度/资源/外部/质量/需求/成本/合规）。

### 6.2 维护频率

- 项目启动时建立初始版本。
- 每个里程碑评审前全面更新。
- 每周项目例会确认新增和状态变化。
- 风险发生时立即更新。

## 7. 问题登记册

### 7.1 结构与字段（v3.7.0，与风险册同构）

| 表 | 列 |
|---|---|
| 汇总索引 | 编号/标题/类别/状态/严重程度/责任人/关联待办数 |
| 核心字段 | 描述句式/严重程度/影响范围/责任人/解决方案指针/Source |
| 关联待办 | TD 编号/动作类型/状态/计划完成 |
| 状态时间线 | 日期/状态前→后/触发依据/操作者 |

状态：开放 / 处理中 / 已阻塞 / 已解决 / 已关闭。严重程度 **P0–P3**（旧模板紧急/高/中/低 → P0/P1/P2/P3）。类别用业务类，**defect 作为其中一类**（收编原 project/defect 二分）。条目头承载关联风险、阻塞任务、来源、提出/计划解决日期。是否延期由时间线推导，不单独存列。Issue ID 见 §2.2（`I-NNN`）。

### 7.2 问题与任务的关联

- 每个问题应关联到受影响的任务（Issue Ref 字段）。
- 任务因问题阻塞时，任务状态改为 `已阻塞`，并填写 Issue Ref。
- 问题解决后，阻塞任务应恢复为 `进行中`。

## 8. Change Log

风险登记册和问题登记册底部各自维护 Change Log，格式同待办文件变更段。Change Log 活跃区上限 50 行或超过 30 天时触发按月归档到 `change-log/archive/YYYYMM-change-log.md`，并维护 `change-log/index.md` 月份导航（与 06 号归档规则一致）。

### 8.1 Issue 主体拆分规则

risk/issue 主体拆分（同构）：
- 触发：活跃册开放类条目 >30 条
- 策略：已关闭/已缓解（风险）或已解决/已关闭（问题）按年归档到 `risks/archive/YYYY-risk-register.md` / `issues/archive/YYYY-issue-register.md`
- 主体仅保留开放类
- 归档后维护 `risks/index.md` / `issues/index.md`（文件/编号区间/条数/开放条数/最近变更日期，≤6 列）
- 查询：index → 活跃册 → 归档册，≤3 跳
- 归档操作记录在 Change Log 中

## 9. 级联传播规则

本实体（Risk / Issue）状态变更时，按以下规则触发下游动作。动作分三类：
- [AUTO] 写派生视图（索引/待办），低风险，直接执行
- [CHECK] 只读校验，检查关联是否存在/一致
- [SUGGEST] 写事实源或影响其他实体，加入建议更新清单待 PM 确认

> **AUTO 作用域声明**：AUTO 仅作用于非事实源的派生视图，不触碰任何事实源文件。事实源写入（含 pending 登记）一律受 `skill-contract.md` 第 5 条约束。

执行顺序：先 AUTO → 再 CHECK → 最后 SUGGEST。
同一处理流程内，级联动作只执行一次；多个 SUGGEST 汇总为同一批建议清单，流程末尾统一输出。
执行完毕后，14 号自查清单验证完整性。

> **强制执行要求**（见 `00-pm-main-rules.md` §8a）：以上 AUTO/CHECK/SUGGEST 动作不得静默跳过。SUGGEST 必须呈现给 PM 确认，不得以"用户未要求"为由省略。流程末尾必须输出"级联完整性"结论。

Risk 创建 →
  [AUTO] 更新 risk-register 衍生索引（若已拆分）
  [SUGGEST] 若 risk.owner 存在 → 建议在其待办文件 todos/{date}/{owner}.md 追加跟进待办（责任人本人，Q6；禁止另为 PM 生成跟进条）
  [SUGGEST] 等级=高且关联待办表为空 → 级联完整性告警，为责任人建应对待办（不得 AUTO 写入，不得静默放过）

Risk 状态 → 已关闭 →
  [AUTO] 更新待办文件中关联待办（Risk Ref 指向本风险）的状态
  [CHECK] 检查是否有 task 的 Risk Ref 指向本风险

Risk 状态 → 转为问题 →
  [SUGGEST] 必须在 issue-register 新增对应 issue，双向 ID 关联（§1 规则 4）
  [AUTO] 更新 risk-register 和 issue-register 的衍生索引
  [SUGGEST] 检查是否有 task 引用本风险 → 建议更新为引用新 issue
  [CHECK] 绑定待办 Risk Ref → Issue Ref 继承，待办不丢关联

预警信号在日报/纪要出现（命中应对子表「触发条件与预警信号」）→
  [SUGGEST] 激活应急待办 + 风险状态评估升档；识别判定卡同批输出

Issue 创建 →
  [AUTO] 更新 issue-register 衍生索引（若已拆分）
  [CHECK] 若含 Risk Ref → 验证关联风险存在且状态合理
  [SUGGEST] 若 issue.owner 存在 → 建议在其待办文件 todos/{date}/{owner}.md 追加处理待办（责任人本人；禁止另为 PM 生成跟进条）
  [SUGGEST] 若关联 task-id → 建议将对应 task 状态设为已阻塞

Issue 状态 → 已解决/已关闭 →
  [AUTO] 更新待办文件中关联待办（问题 Ref 指向本问题）的状态
  [SUGGEST] 检查被阻塞的 task → 建议恢复为进行中
  [CHECK] 若由 Risk 转化而来 → 检查原 Risk 状态是否需要同步

Issue Owner 变更 →
  [AUTO] 更新待办文件中该 issue 关联待办的 Owner 字段

### 9.1 关闭确认佐证强制要求

> 本约束适用于 AI 在 WF-1/WF-2 等流程中建议关闭 Risk 或 Issue 实体时。§9 主体定义关闭后的级联动作，本节定义关闭建议本身的输出质量要求，两者互补。

当级联传播涉及 Risk 或 Issue 的关闭建议（状态 → 已关闭 / 已缓解 / 已解决）时，AI 必须在 SUGGEST 动作中显式列出：

1. **候选关闭项编号**：Risk ID 或 Issue ID
2. **关闭佐证**：具体说明为什么可以关闭（哪个关联 Task 已完成 / 哪个触发条件已消除 / 用户明确确认已解决）
3. **关联影响**：关闭后是否影响其他开放实体
4. **PM 确认门禁（DF-002，v2.1.0 强化）**：候选清单输出后，必须等待 PM 逐条明确确认，方可修改登记册对应状态；未获确认前不得改库，也不得以"默认同意""无异议即关闭"代替确认

**枚举时机**：除级联触发外，日报/周报处理流程（WF-2/WF-5）输出后，AI 应主动批量罗列当期可关闭的风险/问题候选（明确到具体编号 I-XXXX/R-XXXX 并附详细描述与佐证），供 PM 逐条确认。

格式：

```
建议关闭：
1. R-20260810-143025（佐证：关联待办 TD-CJJ-20260810-003 已完成，触发条件已消除）
2. I-20260811-091102（佐证：用户确认问题已解决，日报 2026-08-14 提及）
```

禁止在未列明佐证的情况下输出关闭建议。此要求与 `00-pm-main-rules.md` §8a 的 SUGGEST 强制呈现互补：§8a 确保 SUGGEST 不被跳过，本节确保关闭类 SUGGEST 必须含可验证证据。

> 本节规则由内置默认偏好 **DF-002**（见 pm-profile §1 与 `21-pm-profile-rules.md` §5.1a）承载：PM 可在偏好中修正或废弃（如允许特定类别自动关闭）；PM 有明确声明时以声明为准，无声明时按本节执行。

> 端到端工作流数据路径见 `00-pm-main-rules.md` §9（WF-1~WF-6）。本文件 §9 定义 Risk/Issue 实体的级联规则，00号 §9 定义跨实体的完整工作流路径，两者互补不替代。
